Added additional comments

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
+    <!-- directive (with the help UI-Router) tells Angular where to place the templates when they're requested -->
     <ui-view></ui-view>
 
     <!-- Angular -->
