--- a/app/index.html
+++ b/app/index.html
@@ -49,5 +49,6 @@
     <script src="/scripts/app.js"></script>
     <script src="/scripts/controllers/HomeCtrl.js"></script>
    <script src="/scripts/filters/timecode.js"></script>
+   <script src="/scripts/services/Task.js"></script>
 </body>
 </html>
