Adjusted some styles and added comments

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
+
+<!-- Commenting out idea for header
+
+  <app-navbar>
+    <nav class="docs-navbar-header">
+      <a class="mat-button" tabindex="0" aria-disabled="false" ui-sref="home">
+        <span class="mat-button-wrapper">Logo</span>
+      </a>
+      <a class="mat-button" tabindex="0" aria-disabled="false" ui-sref="timer">
+        <span class="mat-button-wrapper">Timer</span>
+      </a>
+      <a class="mat-button" tabindex="0" aria-disabled="false" ui-sref="task">
+        <span class="mat-button-wrapper">Tasks</span>
+      </a>
+      <a class="mat-button" tabindex="0" aria-disabled="false" ui-sref="metrics">
+        <span class="mat-button-wrapper">Metrics</span>
+      </a>
+    </nav>
+  </app-navbar>
+-->
+
     <!-- directive (with the help UI-Router) tells Angular where to place the templates when they're requested -->
     <ui-view></ui-view>
 
